--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laracasts/flash": "^3.0",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
-        "overtrue/wechat": "~4.0"
+        "overtrue/wechat": "~4.0",
+        "pda/pheanstalk": "~3.0"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
@@ -56,5 +57,11 @@
         "preferred-install": "dist",
         "sort-packages": true,
         "optimize-autoloader": true
+    },
+    "repositories": {
+        "packagist": {
+            "type": "composer",
+            "url": "https://packagist.phpcomposer.com"
+        }
     }
 }
